mxslc/tests/data/error/bad_func_call_3.mxsl

float x = 0.0;

void foo()
{
    x = 1.0;
}

float y = foo();

color3 c = color3(x, y, 0.0);
